--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <title> Map </title>
     <link rel="stylesheet" href="style.css">
+
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -13,7 +22,7 @@
             &nbsp;
             &nbsp;
             <a href="mailto:fatima2009sarah@gmail.com?Subject=Hello" id="mymap">
-                <i class="fa fa-envelope"> &nbsp; SarahFatima@gmail.com </i>
+                <i class="fa fa-envelope"> <span> SarahFatima@gmail.com</span></i>
             </a>
         </div>
     </section>
